# mouse-humanizer

./: CONTRIBUTING.md  README.md  setup.py  windows_human_mouse_controller.py  windows_human_mouse_demo.py
Keyboard_humanizer/: README.md  __init__.py  demo_basic.py  setup.py
Keyboard_humanizer/core/: __init__.py  humanizer.py  typing_engine.py
Keyboard_humanizer/keyboard_humanizer.egg-info/: PKG-INFO  SOURCES.txt
MOUSE_MAIN_LINUX/: ENHANCED_HUMAN_BEHAVIOR.md  FEATURES.md  LINUX_CONVERSION_SUMMARY.md  README.md  SIMPLIFIED_COMPLETION_SUMMARY.md  demo_human_behavior.py  linux_human_mouse_controller.py  linux_human_mouse_demo.py  pyproject.toml
MOUSE_MAIN_LINUX/humancursor/: __init__.py  web_cursor.py
MOUSE_MAIN_LINUX/humancursor/HCScripter/: __init__.py  gui.py  launch.py
MOUSE_MAIN_LINUX/humancursor/test/: system.py  web.py
MOUSE_MAIN_LINUX/humancursor/utilities/: web_adjuster.py
humanmouse/: README.md  __init__.py  linux_controller.py  windows_controller.py
mousehumanizer.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_humanmouse.py
