[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HumanCursor-Linux"
version = "1.1.5"
authors = [
  { name="Flori Batusha", email="floribatusha0@gmail.com" },
]
description = "Simulate Human Cursor Movement for Automated Scripts - Linux Compatible"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "selenium >= 4.9.0",
    "pynput >= 1.7.6",
    "numpy >= 1.24.3",
    "Xlib >= 0.33",
    "python-xlib >= 0.33",
    "evdev >= 1.6.1",
    "pyvirtualdisplay >= 3.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/riflosnake/HumanCursor"